# PROYECTO-1_MPointers-2.0

./: .gitignore  CMakeLists.txt  GRPC-Memorymanager.pb.cc  GRPC-Memorymanager.proto  GRPC_Client.h  README.md
Client/: GRPC_Client.cpp  GRPC_Client.h  mainC.cpp
Server/: GRPC_Server.cpp  GRPC_Server.h  mainS.cpp
Server/Memory_manager/: GarbageCollector.cpp  GarbageCollector.h  MemoryBlock.cpp  MemoryBlock.h  MemoryManager.cpp  MemoryManager.h  MemoryMap.cpp  MemoryMap.h
Server/Mpointers_lib/: MPointer.cpp  MPointer.h
Test/: Linked_list.cpp  Linked_list.h  test_memory_manager.cpp  test_memory_manager.h  test_mpointers.cpp  test_mpointers.h
proto/: GRPC-Memorymanager.grpc.pb.cc  GRPC-Memorymanager.grpc.pb.h  GRPC-Memorymanager.pb.cc  GRPC-Memorymanager.pb.h  GRPC-Memorymanager.proto
